backend/root/records/4/compile_err.txt
/home/ycdfwzy/github/2018SE_THSSOJ/backend/root/records/4/4.code: In function ‘main’:
/home/ycdfwzy/github/2018SE_THSSOJ/backend/root/records/4/4.code:3:9: error: ‘true’ undeclared (first use in this function)
  while (true);
         ^~~~
/home/ycdfwzy/github/2018SE_THSSOJ/backend/root/records/4/4.code:3:9: note: each undeclared identifier is reported only once for each function it appears in
